mdapi/objects/Informational__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Informational Articles - Summary / Information - Similar to How To, but more informational and less exact How To steps.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Hidden field used for the approval process emails</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArticleBody__c</fullName>
        <description>Main body of information in the article</description>
        <label>Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_KB_Date_Created__c</fullName>
        <description>Date the Legacy KB article was posted</description>
        <label>Legacy KB Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_KB_Number__c</fullName>
        <inlineHelpText>Format: KB ###</inlineHelpText>
        <label>Legacy KB Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Keywords__c</fullName>
        <description>NOT REQUIRED FOR NEW ARTICLES:  Copy and paste the keyword field content from the Legacy site article.</description>
        <inlineHelpText>NOT REQUIRED FOR NEW ARTICLES:  Copy and paste the keyword field content from the Legacy site article.</inlineHelpText>
        <label>Legacy Keywords</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_URL__c</fullName>
        <description>Not required for new content.  Paste the Full HTTPS URL from the legacy website.</description>
        <inlineHelpText>Not required for new content.  Paste the Full HTTPS URL from the legacy website.</inlineHelpText>
        <label>Legacy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Overview (Summary) of the article.</description>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Versions__c</fullName>
        <description>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</description>
        <inlineHelpText>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</inlineHelpText>
        <label>Product Versions Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Informational</label>
    <pluralLabel>Informational</pluralLabel>
    <validationRules>
        <fullName>Informational_Title_Length_Rule</fullName>
        <active>true</active>
        <description>Require that the title is less than 66 characters</description>
        <errorConditionFormula>LEN( Title ) &gt; 65</errorConditionFormula>
        <errorMessage>Title Length too long - To optimize Search Engine results, the article title must be less than 66 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legacy_KB_Article_Format</fullName>
        <active>true</active>
        <description>Format: KB ###</description>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK(Legacy_KB_Number__c), 
REGEX( Legacy_KB_Number__c , 
&quot;KB [0-9]{1,3}&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>The Legacy KB Article field is reserved for KB ### article number references. Required format example: KB 263</errorMessage>
    </validationRules>
</CustomObject>